[gd_scene load_steps=18 format=3 uid="uid://bha7hjkjc6sv4"]

[ext_resource type="PackedScene" uid="uid://bicqibepmprw5" path="res://jetRes/jet.tscn" id="1_dkg8r"]
[ext_resource type="Script" path="res://jetRes/jet_cut_scene.gd" id="1_f5hjg"]
[ext_resource type="Texture2D" uid="uid://dys3l260bx3oe" path="res://FinalBoss.png" id="2_ltdcv"]
[ext_resource type="Material" uid="uid://c8v3k6ug2j7hc" path="res://jetRes/BlueTechnoWires.tres" id="4_60pfm"]
[ext_resource type="AudioStream" uid="uid://do3h6276p8fdy" path="res://jetRes/Ludum Dare 30 04.ogg" id="5_2m26m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e0lq6"]
albedo_texture = ExtResource("2_ltdcv")

[sub_resource type="PlaneMesh" id="PlaneMesh_s038n"]
material = SubResource("StandardMaterial3D_e0lq6")

[sub_resource type="BoxShape3D" id="BoxShape3D_c7vke"]
size = Vector3(2, 0.290112, 1.25865)

[sub_resource type="BoxMesh" id="BoxMesh_0a5yx"]
material = ExtResource("4_60pfm")
size = Vector3(100, 1, 500)

[sub_resource type="BoxShape3D" id="BoxShape3D_rsyeg"]
size = Vector3(500, 1, 500)

[sub_resource type="BoxMesh" id="BoxMesh_m5lgn"]
lightmap_size_hint = Vector2i(2509, 3007)
material = ExtResource("4_60pfm")
uv2_padding = 2.09
size = Vector3(1, 50, 500)

[sub_resource type="BoxShape3D" id="BoxShape3D_kisy4"]
size = Vector3(1, 50, 500)

[sub_resource type="BoxMesh" id="BoxMesh_ggc5l"]
lightmap_size_hint = Vector2i(2509, 3007)
material = ExtResource("4_60pfm")
uv2_padding = 2.09
size = Vector3(1, 50, 500)

[sub_resource type="BoxShape3D" id="BoxShape3D_0oys3"]
size = Vector3(1, 50, 500)

[sub_resource type="BoxMesh" id="BoxMesh_5luqd"]
lightmap_size_hint = Vector2i(2509, 3007)
material = ExtResource("4_60pfm")
uv2_padding = 2.09
size = Vector3(1, 50, 500)

[sub_resource type="BoxShape3D" id="BoxShape3D_v0kvi"]
size = Vector3(1, 50, 500)

[sub_resource type="BoxMesh" id="BoxMesh_0xddf"]
lightmap_size_hint = Vector2i(2509, 3007)
material = ExtResource("4_60pfm")
uv2_padding = 2.09
size = Vector3(1, 50, 500)

[node name="JetCutScene" type="Node3D"]
script = ExtResource("1_f5hjg")

[node name="Jet" parent="." instance=ExtResource("1_dkg8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.4974)

[node name="JetCamera" type="Camera3D" parent="Jet"]
transform = Transform3D(0.945359, 0, -0.32603, 0, 1, 0, 0.32603, 0, 0.945359, -2.24832, 1.12222, 5.44825)

[node name="IanMobArea" type="Area3D" parent="."]
transform = Transform3D(-2, -1.74846e-07, 7.64274e-15, 0, -8.74228e-08, -2, 1.74846e-07, -2, 8.74228e-08, 0, 0.327036, 18.3309)

[node name="MeshInstance3D" type="MeshInstance3D" parent="IanMobArea"]
mesh = SubResource("PlaneMesh_s038n")

[node name="CollisionShape3D" type="CollisionShape3D" parent="IanMobArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0950562, -0.084816)
shape = SubResource("BoxShape3D_c7vke")

[node name="IanCamera" type="Camera3D" parent="IanMobArea"]
transform = Transform3D(0.477026, 5.71747e-21, 0.14982, -0.14982, -2.18557e-08, 0.477026, 6.54885e-09, -0.5, -2.08515e-08, 0.792969, 3.06561, -0.470558)

[node name="Dialogue" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Dialogue"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -333.0
offset_top = -91.0
offset_right = 333.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1

[node name="Button" type="Button" parent="Dialogue"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.964063
anchor_top = 0.946296
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -245.0
offset_top = -117.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Continue"
metadata/_edit_use_anchors_ = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 50.667, 0)

[node name="Ground1" type="StaticBody3D" parent="." groups=["ground"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -4.17869, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground1"]
mesh = SubResource("BoxMesh_0a5yx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground1"]
shape = SubResource("BoxShape3D_rsyeg")

[node name="Wall1" type="StaticBody3D" parent="." groups=["walls"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.6091, 2.96581, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall1"]
mesh = SubResource("BoxMesh_m5lgn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall1"]
shape = SubResource("BoxShape3D_kisy4")

[node name="Wall2" type="StaticBody3D" parent="." groups=["walls"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.2669, 2.96581, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall2"]
mesh = SubResource("BoxMesh_ggc5l")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall2"]
shape = SubResource("BoxShape3D_0oys3")

[node name="Wall3" type="StaticBody3D" parent="." groups=["walls"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15.2669, 2.96581, 41.6625)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall3"]
mesh = SubResource("BoxMesh_5luqd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall3"]
shape = SubResource("BoxShape3D_v0kvi")

[node name="Wall4" type="StaticBody3D" parent="." groups=["walls"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15.2669, 2.96581, -36.6007)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall4"]
mesh = SubResource("BoxMesh_0xddf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall4"]
shape = SubResource("BoxShape3D_0oys3")

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="AudioListener3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.87135, 0)
stream = ExtResource("5_2m26m")
volume_db = -25.0
autoplay = true

[connection signal="pressed" from="Dialogue/Button" to="." method="_on_button_pressed"]
[connection signal="finished" from="AudioListener3D/AudioStreamPlayer3D" to="." method="_on_audio_stream_player_3d_finished"]
